	PR target/18002 	PR middle-end/18424 	* dojump.c (do_jump): When attempting to reverse the effects of 	fold_single_bit_test, we need to STRIP_NOPS and narrowing type 	conversions, and handle BIT_XOR_EXPR that's used to invert the 	sense of the single bit test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@92024 138bc75d-0d04-0410-961f-82ee72b054a4